# heaps-android

./: .gitmodules  readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c  stubs.c
app/src/main/cpp/hashlink/: CMakeLists.txt
app/src/main/cpp/hashlink/include/libuv/src/unix/: android-compat.c
app/src/main/cpp/hashlink/include/pcre/: pcre2_pattern_info.c
app/src/main/cpp/hashlink/libs/sdl/: gl.c
app/src/main/cpp/hashlink/src/std/: sys_android.c
app/src/main/cpp/openal-soft/: CMakeLists.txt  config.h.in
app/src/main/cpp/openal-soft/OpenAL32/Include/: alMain.h
app/src/main/java/io/heaps/android/: HeapsActivity.java
app/src/main/java/org/libsdl/app/: SDL.java  SDLActivity.java  SDLAudioManager.java
gradle/wrapper/: gradle-wrapper.properties
heaps-src/: compile.hxml  main.hl  readme.md
heaps-src/src/: Main.hx
heaps-src/src/h2d/: PasswordText.hx
heaps-src/src/hxd/js/: MobileInput.hx
heaps-src/src/hxd/mobile/: AndroidInput.hx  AndroidTools.hx
